--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,10 @@ shortzy
 datetime
 pytz
 aiohttp
+Flask==2.2.2
+gunicorn==20.1.0
+aiohttp==3.8.1
+countryinfo
+aiofiles==22.1.0
+telegraph==2.2.0
+Pillow==9.4.0
